# ml3-platform-docs

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.hooks/: pre-commit
data-schema-templates/: classification_binary_embedding.json  classification_binary_image.json  classification_binary_tabular.json  classification_binary_text.json  classification_multiclass_embedding.json  classification_multiclass_image.json  classification_multiclass_tabular.json  classification_multiclass_text.json  classification_multilabel_embedding.json  classification_multilabel_image.json  classification_multilabel_tabular.json  classification_multilabel_text.json  clustering_embedding.json  clustering_image.json  clustering_tabular.json  clustering_text.json  object_detection.json  ocr.json  ocr_plain_text.json  ocr_with_labels.json  rag.json  rag_multi_turn.json  rag_single_turn.json  regression_embedding.json  regression_image.json  regression_tabular.json  regression_text.json  semantic_segmentation.json  timeseries.json
docs/: 404.html  index.html  index.md  my_page.md  sitemap.xml
docs/api/: index.html  index.md
docs/client_sdk/: index.md  python.md
docs/getting_started/: index.html
docs/search/: search_index.json
docs/tables/: data schema validation.xlsx  (+2 more)
edge-config/: example_config.json
md-docs/: index.md
notebooks/: 0_company_project.ipynb  1_task_and_model.ipynb  2_production.ipynb  image_classification.ipynb  rag.ipynb  synth_regression_complete_example.ipynb  text_classification.ipynb
site/: 404.html  index.html  sitemap.xml
(+139 files in other folders)
