[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ml3-platform-docs"
version = "0.0.1"
description = "ML cube Platform documentation"
authors = ["Alessandro Lavelli <alessandro.lavelli@mlcube.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
mkdocs = ">=1.5.0"
mkdocs-material = "^9.1.14"
mkdocs-material-extensions = ">=1.1"
pygments = ">=2.14"
pymdown-extensions = ">=9.9.1"
jinja2 = ">=3.0"
markdown = ">=3.2"
mkdocs-minify-plugin = "^0.7.1"
mkdocs-glightbox = "^0.3.4"
mkdocs-table-reader-plugin = "^2.0.1"
