[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml3-platform-docs"
version = "0.0.1"
description = "ML cube Platform documentation"
requires-python = ">=3.9"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-material-extensions>=1.1",
    "pygments>=2.14",
    "pymdown-extensions>=9.9.1",
    "jinja2>=3.0",
    "markdown>=3.2",
    "mkdocs-minify-plugin>=0.7.1",
    "mkdocs-glightbox>=0.3.4",
    "mkdocs-table-reader-plugin>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "ml3-platform-sdk==0.0.15",
    "polars>=0.19.3",
    "scikit-learn",
    "torch==2.2.0",
    "torchvision==0.17.0",
    "transformers[torch]",
    "datasets==2.15.0",
    "sentence-transformers",
    "evaluate",
    "pillow",
    "requests",
    "jupyter",
    "ipykernel",
]
